[gd_scene load_steps=13 format=4 uid="uid://cinideb2xyoyu"]

[ext_resource type="Script" path="res://scenes/test/level_scene_tile_map.gd" id="1_t6f88"]
[ext_resource type="TileSet" uid="uid://c4ajugvgndiqg" path="res://tilesets/game_tileset.tres" id="2_otv4i"]
[ext_resource type="Theme" uid="uid://bnhngmri4tfgr" path="res://assets/FlatUI4/kenneyUI-green.tres" id="3_xjnma"]
[ext_resource type="FontFile" uid="uid://c5rf6prrbtmlf" path="res://assets/LazyFox Pixel Font 2/LazyFox Pixel Font 2.ttf" id="4_ill7t"]
[ext_resource type="PackedScene" uid="uid://dnfjmhpk0u6e4" path="res://scenes/objects/box.tscn" id="5_rafwo"]
[ext_resource type="PackedScene" uid="uid://baxp276pm1rfe" path="res://scenes/objects/robot.tscn" id="6_1pnhj"]
[ext_resource type="PackedScene" uid="uid://p7ybampb1tfy" path="res://scenes/objects/up_conveyer.tscn" id="7_ieykd"]
[ext_resource type="PackedScene" uid="uid://cwg25j64nh2a1" path="res://scenes/objects/down_conveyer.tscn" id="8_se0mb"]
[ext_resource type="PackedScene" uid="uid://dvo6tcok7ir0v" path="res://scenes/ui/game_screen.tscn" id="9_utias"]
[ext_resource type="PackedScene" uid="uid://b3iftxv3trypu" path="res://scenes/ui/error_message.tscn" id="10_1iixk"]
[ext_resource type="PackedScene" uid="uid://c7e2gm1ni8m6g" path="res://scenes/ui/game_over_window.tscn" id="11_fe8m0"]
[ext_resource type="Theme" uid="uid://bb6vwl0h1flws" path="res://assets/FlatUI4/kenneyUI-blue.tres" id="12_bj73v"]

[node name="LevelSceneTileMap" type="Node2D"]
script = ExtResource("1_t6f88")

[node name="GameTileMap" type="Node2D" parent="."]

[node name="Ground" type="TileMapLayer" parent="GameTileMap"]
tile_map_data = PackedByteArray("AAD/////AQAiAAEAAAD//wAAAQAiAAEAAAD//wEAAQAiAAEAAAD//wIAAQAiAAEAAAD//wMAAQAiAAEAAAD//wQAAQAiAAEAAAD//wUAAQAiAAEAAAD//wYAAQAiAAEAAAD//wcAAQAiAAEAAAD//wgAAQAiAAEAAAD//wkAAQAiAAEAAAD//woAAQAiAAEAAAD//wsAAQAiAAEAAAD//wwAAQAiAAEAAAD//w0AAQAiAAEAAAD//w4AAQAiAAEAAAD//w8AAQAiAAEAAAAAAP//AQAiAAEAAAAAAAAAAQAiAAEAAAAAAAEAAQAiAAEAAAAAAAIAAQAiAAEAAAAAAAMAAQAiAAEAAAAAAAQAAQAiAAEAAAAAAAUAAQAiAAEAAAAAAAYAAQAiAAEAAAAAAAcAAQAiAAEAAAAAAAgAAQAiAAEAAAAAAAkAAQAiAAEAAAAAAAoAAQAiAAEAAAAAAAsAAQAiAAEAAAAAAAwAAQAiAAEAAAAAAA0AAQAiAAEAAAAAAA4AAQAiAAEAAAAAAA8AAQAiAAEAAAABAP//AQAiAAEAAAABAAAAAQAiAAEAAAABAAEAAQAiAAEAAAABAAIAAQAiAAEAAAABAAMAAQAiAAEAAAABAAQAAQAiAAEAAAABAAUAAQAiAAEAAAABAAYAAQAiAAEAAAABAAcAAQAiAAEAAAABAAgAAQAiAAEAAAABAAkAAQAiAAEAAAABAAoAAQAiAAEAAAABAAsAAQAiAAEAAAABAAwAAQAiAAEAAAABAA0AAQAiAAEAAAABAA4AAQAiAAEAAAABAA8AAQAiAAEAAAACAP//AQAiAAEAAAACAAAAAQAiAAEAAAACAAEAAQAiAAEAAAACAAIAAQAiAAEAAAACAAMAAQAiAAEAAAACAAQAAQAiAAEAAAACAAUAAQAiAAEAAAACAAYAAQAiAAEAAAACAAcAAQAiAAEAAAACAAgAAQAiAAEAAAACAAkAAQAiAAEAAAACAAoAAQAiAAEAAAACAAsAAQAiAAEAAAACAAwAAQAiAAEAAAACAA0AAQAiAAEAAAACAA4AAQAiAAEAAAACAA8AAQAiAAEAAAADAP//AQAiAAEAAAADAAAAAQAiAAEAAAADAAEAAQAiAAEAAAADAAIAAQAiAAEAAAADAAMAAQAiAAEAAAADAAQAAQAiAAEAAAADAAUAAgAAAA0AAAADAAYAAQAiAAEAAAADAAcAAQAiAAEAAAADAAgAAQAiAAEAAAADAAkAAQAiAAEAAAADAAoAAQAiAAEAAAADAAsAAQAiAAEAAAADAAwAAQAiAAEAAAADAA0AAQAiAAEAAAADAA4AAQAiAAEAAAADAA8AAQAiAAEAAAAEAP//AQAiAAEAAAAEAAAAAQAiAAEAAAAEAAEAAQAiAAEAAAAEAAIAAQAiAAEAAAAEAAMAAQAiAAEAAAAEAAQAAQAiAAEAAAAEAAUAAgAAAA0AAAAEAAYAAQAiAAEAAAAEAAcAAQAiAAEAAAAEAAgAAQAiAAEAAAAEAAkAAQAiAAEAAAAEAAoAAQAiAAEAAAAEAAsAAQAiAAEAAAAEAAwAAQAiAAEAAAAEAA0AAQAiAAEAAAAEAA4AAQAiAAEAAAAEAA8AAQAiAAEAAAAFAP//AQAiAAEAAAAFAAAAAQAiAAEAAAAFAAEAAQAiAAEAAAAFAAIAAQAiAAEAAAAFAAMAAQAiAAEAAAAFAAQAAQAiAAEAAAAFAAUAAQAiAAEAAAAFAAYAAQAiAAEAAAAFAAcAAQAiAAEAAAAFAAgAAQAiAAEAAAAFAAkAAQAiAAEAAAAFAAoAAQAiAAEAAAAFAAsAAQAiAAEAAAAFAAwAAQAiAAEAAAAFAA0AAQAiAAEAAAAFAA4AAQAiAAEAAAAFAA8AAQAiAAEAAAAGAP//AQAiAAEAAAAGAAAAAQAiAAEAAAAGAAEAAQAiAAEAAAAGAAIAAQAiAAEAAAAGAAMAAQAiAAEAAAAGAAQAAQAiAAEAAAAGAAUAAQAiAAEAAAAGAAYAAQAiAAEAAAAGAAcAAQAiAAEAAAAGAAgAAQAiAAEAAAAGAAkAAQAiAAEAAAAGAAoAAQAiAAEAAAAGAAsAAQAiAAEAAAAGAAwAAQAiAAEAAAAGAA0AAQAiAAEAAAAGAA4AAQAiAAEAAAAGAA8AAQAiAAEAAAAHAP//AQAiAAEAAAAHAAAAAQAiAAEAAAAHAAEAAQAiAAEAAAAHAAIAAQAiAAEAAAAHAAMAAQAiAAEAAAAHAAQAAQAiAAEAAAAHAAUAAQAiAAEAAAAHAAYAAQAiAAEAAAAHAAcAAQAiAAEAAAAHAAgAAQAiAAEAAAAHAAkAAQAiAAEAAAAHAAoAAQAiAAEAAAAHAAsAAQAiAAEAAAAHAAwAAQAiAAEAAAAHAA0AAQAiAAEAAAAHAA4AAQAiAAEAAAAHAA8AAQAiAAEAAAAIAP//AQAiAAEAAAAIAAAAAQAiAAEAAAAIAAEAAQAiAAEAAAAIAAIAAQAiAAEAAAAIAAMAAQAiAAEAAAAIAAQAAQAiAAEAAAAIAAUAAQAiAAEAAAAIAAYAAQAiAAEAAAAIAAcAAQAiAAEAAAAIAAgAAQAiAAEAAAAIAAkAAQAiAAEAAAAIAAoAAQAiAAEAAAAIAAsAAQAiAAEAAAAIAAwAAQAiAAEAAAAIAA0AAQAiAAEAAAAIAA4AAQAiAAEAAAAIAA8AAQAiAAEAAAAJAP//AQAiAAEAAAAJAAAAAQAiAAEAAAAJAAEAAQAiAAEAAAAJAAIAAQAiAAEAAAAJAAMAAQAiAAEAAAAJAAQAAQAiAAEAAAAJAAUAAQAiAAEAAAAJAAYAAQAiAAEAAAAJAAcAAQAiAAEAAAAJAAgAAQAiAAEAAAAJAAkAAQAiAAEAAAAJAAoAAQAiAAEAAAAJAAsAAQAiAAEAAAAJAAwAAQAiAAEAAAAJAA0AAQAiAAEAAAAJAA4AAQAiAAEAAAAJAA8AAQAiAAEAAAAKAP//AQAiAAEAAAAKAAAAAQAiAAEAAAAKAAEAAQAiAAEAAAAKAAIAAQAiAAEAAAAKAAMAAQAiAAEAAAAKAAQAAQAiAAEAAAAKAAUAAQAiAAEAAAAKAAYAAQAiAAEAAAAKAAcAAQAiAAEAAAAKAAgAAQAiAAEAAAAKAAkAAQAiAAEAAAAKAAoAAQAiAAEAAAAKAAsAAQAiAAEAAAAKAAwAAQAiAAEAAAAKAA0AAQAiAAEAAAAKAA4AAQAiAAEAAAAKAA8AAQAiAAEAAAALAP//AQAiAAEAAAALAAAAAQAiAAEAAAALAAEAAQAiAAEAAAALAAIAAQAiAAEAAAALAAMAAQAiAAEAAAALAAQAAQAiAAEAAAALAAUAAQAiAAEAAAALAAYAAQAiAAEAAAALAAcAAQAiAAEAAAALAAgAAQAiAAEAAAALAAkAAQAiAAEAAAALAAoAAQAiAAEAAAALAAsAAQAiAAEAAAALAAwAAQAiAAEAAAALAA0AAQAiAAEAAAALAA4AAQAiAAEAAAALAA8AAQAiAAEAAAAMAP//AQAiAAEAAAAMAAAAAQAiAAEAAAAMAAEAAQAiAAEAAAAMAAIAAQAiAAEAAAAMAAMAAQAiAAEAAAAMAAQAAQAiAAEAAAAMAAUAAQAiAAEAAAAMAAYAAQAiAAEAAAAMAAcAAQAiAAEAAAAMAAgAAQAiAAEAAAAMAAkAAQAiAAEAAAAMAAoAAQAiAAEAAAAMAAsAAQAiAAEAAAAMAAwAAQAiAAEAAAAMAA0AAQAiAAEAAAAMAA4AAQAiAAEAAAAMAA8AAQAiAAEAAAANAP//AQAiAAEAAAANAAAAAQAiAAEAAAANAAEAAQAiAAEAAAANAAIAAQAiAAEAAAANAAMAAQAiAAEAAAANAAQAAQAiAAEAAAANAAUAAQAiAAEAAAANAAYAAQAiAAEAAAANAAcAAQAiAAEAAAANAAgAAQAiAAEAAAANAAkAAQAiAAEAAAANAAoAAQAiAAEAAAANAAsAAQAiAAEAAAANAAwAAQAiAAEAAAANAA0AAQAiAAEAAAANAA4AAQAiAAEAAAANAA8AAQAiAAEAAAAOAP//AQAiAAEAAAAOAAAAAQAiAAEAAAAOAAEAAQAiAAEAAAAOAAIAAQAiAAEAAAAOAAMAAQAiAAEAAAAOAAQAAQAiAAEAAAAOAAUAAQAiAAEAAAAOAAYAAQAiAAEAAAAOAAcAAQAiAAEAAAAOAAgAAQAiAAEAAAAOAAkAAQAiAAEAAAAOAAoAAQAiAAEAAAAOAAsAAQAiAAEAAAAOAAwAAQAiAAEAAAAOAA0AAQAiAAEAAAAOAA4AAQAiAAEAAAAOAA8AAQAiAAEAAAAPAP//AQAiAAEAAAAPAAAAAQAiAAEAAAAPAAEAAQAiAAEAAAAPAAIAAQAiAAEAAAAPAAMAAQAiAAEAAAAPAAQAAQAiAAEAAAAPAAUAAQAiAAEAAAAPAAYAAQAiAAEAAAAPAAcAAQAiAAEAAAAPAAgAAQAiAAEAAAAPAAkAAQAiAAEAAAAPAAoAAQAiAAEAAAAPAAsAAQAiAAEAAAAPAAwAAQAiAAEAAAAPAA0AAQAiAAEAAAAPAA4AAQAiAAEAAAAPAA8AAQAiAAEAAAAQAP//AQAiAAEAAAAQAAAAAQAiAAEAAAAQAAEAAQAiAAEAAAAQAAIAAQAiAAEAAAAQAAMAAQAiAAEAAAAQAAQAAQAiAAEAAAAQAAUAAgABAA0AAAAQAAYAAQAiAAEAAAAQAAcAAQAiAAEAAAAQAAgAAQAiAAEAAAAQAAkAAQAiAAEAAAAQAAoAAQAiAAEAAAAQAAsAAQAiAAEAAAAQAAwAAQAiAAEAAAAQAA0AAQAiAAEAAAAQAA4AAQAiAAEAAAAQAA8AAQAiAAEAAAARAP//AQAiAAEAAAARAAAAAQAiAAEAAAARAAEAAQAiAAEAAAARAAIAAQAiAAEAAAARAAMAAQAiAAEAAAARAAQAAQAiAAEAAAARAAUAAgABAA0AAAARAAYAAQAiAAEAAAARAAcAAQAiAAEAAAARAAgAAQAiAAEAAAARAAkAAQAiAAEAAAARAAoAAQAiAAEAAAARAAsAAQAiAAEAAAARAAwAAQAiAAEAAAARAA0AAQAiAAEAAAARAA4AAQAiAAEAAAARAA8AAQAiAAEAAAASAP//AQAiAAEAAAASAAAAAQAiAAEAAAASAAEAAQAiAAEAAAASAAIAAQAiAAEAAAASAAMAAQAiAAEAAAASAAQAAQAiAAEAAAASAAUAAQAiAAEAAAASAAYAAQAiAAEAAAASAAcAAQAiAAEAAAASAAgAAQAiAAEAAAASAAkAAQAiAAEAAAASAAoAAQAiAAEAAAASAAsAAQAiAAEAAAASAAwAAQAiAAEAAAASAA0AAQAiAAEAAAASAA4AAQAiAAEAAAASAA8AAQAiAAEAAAATAP//AQAiAAEAAAATAAAAAQAiAAEAAAATAAEAAQAiAAEAAAATAAIAAQAiAAEAAAATAAMAAQAiAAEAAAATAAQAAQAiAAEAAAATAAUAAQAiAAEAAAATAAYAAQAiAAEAAAATAAcAAQAiAAEAAAATAAgAAQAiAAEAAAATAAkAAQAiAAEAAAATAAoAAQAiAAEAAAATAAsAAQAiAAEAAAATAAwAAQAiAAEAAAATAA0AAQAiAAEAAAATAA4AAQAiAAEAAAATAA8AAQAiAAEAAAAUAP//AQAiAAEAAAAUAAAAAQAiAAEAAAAUAAEAAQAiAAEAAAAUAAIAAQAiAAEAAAAUAAMAAQAiAAEAAAAUAAQAAQAiAAEAAAAUAAUAAQAiAAEAAAAUAAYAAQAiAAEAAAAUAAcAAQAiAAEAAAAUAAgAAQAiAAEAAAAUAAkAAQAiAAEAAAAUAAoAAQAiAAEAAAAUAAsAAQAiAAEAAAAUAAwAAQAiAAEAAAAUAA0AAQAiAAEAAAAUAA4AAQAiAAEAAAAUAA8AAQAiAAEAAAAVAP//AQAiAAEAAAAVAAAAAQAiAAEAAAAVAAEAAQAiAAEAAAAVAAIAAQAiAAEAAAAVAAMAAQAiAAEAAAAVAAQAAQAiAAEAAAAVAAUAAQAiAAEAAAAVAAYAAQAiAAEAAAAVAAcAAQAiAAEAAAAVAAgAAQAiAAEAAAAVAAkAAQAiAAEAAAAVAAoAAQAiAAEAAAAVAAsAAQAiAAEAAAAVAAwAAQAiAAEAAAAVAA0AAQAiAAEAAAAVAA4AAQAiAAEAAAAVAA8AAQAiAAEAAAAWAP//AQAiAAEAAAAWAAAAAQAiAAEAAAAWAAEAAQAiAAEAAAAWAAIAAQAiAAEAAAAWAAMAAQAiAAEAAAAWAAQAAQAiAAEAAAAWAAYAAQAiAAEAAAAWAAcAAQAiAAEAAAAWAAgAAQAiAAEAAAAWAAkAAQAiAAEAAAAWAAoAAQAiAAEAAAAWAAsAAQAiAAEAAAAWAAwAAQAiAAEAAAAWAA0AAQAiAAEAAAAWAA4AAQAiAAEAAAAWAA8AAQAiAAEAAAAXAP//AQAiAAEAAAAXAAAAAQAiAAEAAAAXAAEAAQAiAAEAAAAXAAIAAQAiAAEAAAAXAAMAAQAiAAEAAAAXAAQAAQAiAAEAAAAXAAYAAQAiAAEAAAAXAAcAAQAiAAEAAAAXAAgAAQAiAAEAAAAXAAkAAQAiAAEAAAAXAAoAAQAiAAEAAAAXAAsAAQAiAAEAAAAXAAwAAQAiAAEAAAAXAA0AAQAiAAEAAAAXAA4AAQAiAAEAAAAXAA8AAQAiAAEAAAAYAP//AQAiAAEAAAAYAAAAAQAiAAEAAAAYAAEAAQAiAAEAAAAYAAIAAQAiAAEAAAAYAAMAAQAiAAEAAAAYAAQAAQAiAAEAAAAYAAUAAQAiAAEAAAAYAAYAAQAiAAEAAAAYAAcAAQAiAAEAAAAYAAgAAQAiAAEAAAAYAAkAAQAiAAEAAAAYAAoAAQAiAAEAAAAYAAsAAQAiAAEAAAAYAAwAAQAiAAEAAAAYAA0AAQAiAAEAAAAYAA4AAQAiAAEAAAAYAA8AAQAiAAEAAAAZAP//AQAiAAEAAAAZAAAAAQAiAAEAAAAZAAEAAQAiAAEAAAAZAAIAAQAiAAEAAAAZAAMAAQAiAAEAAAAZAAQAAQAiAAEAAAAZAAUAAQAiAAEAAAAZAAYAAQAiAAEAAAAZAAcAAQAiAAEAAAAZAAgAAQAiAAEAAAAZAAkAAQAiAAEAAAAZAAoAAQAiAAEAAAAZAAsAAQAiAAEAAAAZAAwAAQAiAAEAAAAZAA0AAQAiAAEAAAAZAA4AAQAiAAEAAAAZAA8AAQAiAAEAAAAaAP//AQAiAAEAAAAaAAAAAQAiAAEAAAAaAAEAAQAiAAEAAAAaAAIAAQAiAAEAAAAaAAMAAQAiAAEAAAAaAAQAAQAiAAEAAAAaAAUAAQAiAAEAAAAaAAYAAQAiAAEAAAAaAAcAAQAiAAEAAAAaAAgAAQAiAAEAAAAaAAkAAQAiAAEAAAAaAAoAAQAiAAEAAAAaAAsAAQAiAAEAAAAaAAwAAQAiAAEAAAAaAA0AAQAiAAEAAAAaAA4AAQAiAAEAAAAaAA8AAQAiAAEAAAAbAP//AQAiAAEAAAAbAAAAAQAiAAEAAAAbAAEAAQAiAAEAAAAbAAIAAQAiAAEAAAAbAAMAAQAiAAEAAAAbAAQAAQAiAAEAAAAbAAUAAQAiAAEAAAAbAAYAAQAiAAEAAAAbAAcAAQAiAAEAAAAbAAgAAQAiAAEAAAAbAAkAAQAiAAEAAAAbAAoAAQAiAAEAAAAbAAsAAQAiAAEAAAAbAAwAAQAiAAEAAAAbAA0AAQAiAAEAAAAbAA4AAQAiAAEAAAAbAA8AAQAiAAEAAAAWAAUAAQAiAAEAAAAXAAUAAQAiAAEAAAA=")
tile_set = ExtResource("2_otv4i")

[node name="R0" type="Node2D" parent="GameTileMap"]

[node name="Register0" type="TileMapLayer" parent="GameTileMap/R0"]
tile_map_data = PackedByteArray("AAAJAAgAAQAgAAIAAAAJAAkAAQAgAAIAAAAJAAoAAQAgAAIAAAAKAAoAAQAgAAIAAAALAAoAAQAgAAIAAAALAAkAAQAgAAIAAAAKAAkAAQAgAAIAAAAKAAgAAQAgAAIAAAALAAgAAQAgAAIAAAA=")
tile_set = ExtResource("2_otv4i")

[node name="Panel" type="Panel" parent="GameTileMap/R0"]
offset_left = 288.0
offset_top = 355.0
offset_right = 386.0
offset_bottom = 384.0
theme = ExtResource("3_xjnma")

[node name="Label" type="Label" parent="GameTileMap/R0/Panel"]
layout_mode = 0
offset_left = 3.0
offset_top = 4.0
offset_right = 96.0
offset_bottom = 24.0
theme_override_fonts/font = ExtResource("4_ill7t")
theme_override_font_sizes/font_size = 16
text = "Register 0"

[node name="Box" parent="GameTileMap/R0" instance=ExtResource("5_rafwo")]
visible = false
position = Vector2(336, 304)

[node name="R1" type="Node2D" parent="GameTileMap"]

[node name="Register1" type="TileMapLayer" parent="GameTileMap/R1"]
tile_map_data = PackedByteArray("AAAHAAgAAQAgAAIAAAAGAAgAAQAgAAIAAAAFAAgAAQAgAAIAAAAFAAkAAQAgAAIAAAAFAAoAAQAgAAIAAAAGAAoAAQAgAAIAAAAHAAoAAQAgAAIAAAAHAAkAAQAgAAIAAAAGAAkAAQAgAAIAAAA=")
tile_set = ExtResource("2_otv4i")

[node name="Panel" type="Panel" parent="GameTileMap/R1"]
offset_left = 159.0
offset_top = 355.0
offset_right = 257.0
offset_bottom = 384.0
theme = ExtResource("3_xjnma")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="GameTileMap/R1/Panel"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 95.0
offset_bottom = 25.0
theme_override_fonts/font = ExtResource("4_ill7t")
theme_override_font_sizes/font_size = 16
text = "Register 1"
metadata/_edit_use_anchors_ = true

[node name="Box" parent="GameTileMap/R1" instance=ExtResource("5_rafwo")]
visible = false
position = Vector2(207, 305)

[node name="R2" type="Node2D" parent="GameTileMap"]

[node name="Register2" type="TileMapLayer" parent="GameTileMap/R2"]
tile_map_data = PackedByteArray("AAANAAgAAQAgAAIAAAANAAkAAQAgAAIAAAANAAoAAQAgAAIAAAAOAAoAAQAgAAIAAAAPAAoAAQAgAAIAAAAPAAkAAQAgAAIAAAAPAAgAAQAgAAIAAAAOAAgAAQAgAAIAAAAOAAkAAQAgAAIAAAA=")
tile_set = ExtResource("2_otv4i")

[node name="Panel" type="Panel" parent="GameTileMap/R2"]
offset_left = 416.0
offset_top = 355.0
offset_right = 514.0
offset_bottom = 384.0
theme = ExtResource("3_xjnma")

[node name="Label" type="Label" parent="GameTileMap/R2/Panel"]
layout_mode = 0
offset_left = 3.0
offset_top = 4.0
offset_right = 96.0
offset_bottom = 24.0
theme_override_fonts/font = ExtResource("4_ill7t")
theme_override_font_sizes/font_size = 16
text = "Register 2"

[node name="Box" parent="GameTileMap/R2" instance=ExtResource("5_rafwo")]
visible = false
position = Vector2(464, 304)

[node name="RobotCarryingBox" parent="." instance=ExtResource("5_rafwo")]
position = Vector2(318, 213)
scale = Vector2(0.5, 0.5)

[node name="Robot" parent="." instance=ExtResource("6_1pnhj")]
position = Vector2(337, 211)
scale = Vector2(2.5, 2.5)

[node name="InputConveyer" type="Node2D" parent="."]

[node name="UpConveyer" parent="InputConveyer" instance=ExtResource("7_ieykd")]
position = Vector2(127, 224)
scale = Vector2(2, 2)

[node name="UpConveyer2" parent="InputConveyer" instance=ExtResource("7_ieykd")]
position = Vector2(127, 288)
scale = Vector2(2, 2)

[node name="UpConveyer3" parent="InputConveyer" instance=ExtResource("7_ieykd")]
position = Vector2(127, 352)
scale = Vector2(2, 2)

[node name="UpConveyer4" parent="InputConveyer" instance=ExtResource("7_ieykd")]
position = Vector2(127, 416)
scale = Vector2(2, 2)

[node name="UpConveyer5" parent="InputConveyer" instance=ExtResource("7_ieykd")]
position = Vector2(127, 480)
scale = Vector2(2, 2)

[node name="OutputConveyer" type="Node2D" parent="."]

[node name="DownConveyer" parent="OutputConveyer" instance=ExtResource("8_se0mb")]
position = Vector2(544, 224)
scale = Vector2(2, 2)

[node name="DownConveyer2" parent="OutputConveyer" instance=ExtResource("8_se0mb")]
position = Vector2(544, 288)
scale = Vector2(2, 2)

[node name="DownConveyer3" parent="OutputConveyer" instance=ExtResource("8_se0mb")]
position = Vector2(544, 352)
scale = Vector2(2, 2)

[node name="DownConveyer4" parent="OutputConveyer" instance=ExtResource("8_se0mb")]
position = Vector2(544, 416)
scale = Vector2(2, 2)

[node name="DownConveyer5" parent="OutputConveyer" instance=ExtResource("8_se0mb")]
position = Vector2(544, 480)
scale = Vector2(2, 2)

[node name="InputBoxSeq" type="Node2D" parent="."]

[node name="OutputBoxSeq" type="Node2D" parent="."]

[node name="GameScreen" parent="." instance=ExtResource("9_utias")]

[node name="Timer" type="Timer" parent="."]

[node name="ErrorMessage" parent="." instance=ExtResource("10_1iixk")]
offset_left = 339.0
offset_top = 500.0
offset_right = 339.0
offset_bottom = 500.0
scale = Vector2(0.8, 0.8)

[node name="LevelCount" type="Panel" parent="."]
offset_left = 13.0
offset_top = 9.0
offset_right = 137.0
offset_bottom = 49.0
theme = ExtResource("12_bj73v")

[node name="LevelCountLabel" type="Label" parent="LevelCount"]
layout_mode = 2
offset_left = 6.0
offset_top = 5.0
offset_right = 121.0
offset_bottom = 35.0
theme_override_fonts/font = ExtResource("4_ill7t")
theme_override_font_sizes/font_size = 24
text = "Level 0"
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_right = 864.0
offset_bottom = 486.0
color = Color(0.588235, 0.588235, 0.588235, 0.588235)

[node name="GameOverWindow" parent="." instance=ExtResource("11_fe8m0")]
visible = false
offset_left = 281.0
offset_top = 158.0
offset_right = 281.0
offset_bottom = 158.0
